--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html{
   height:100%;
 }
 body{
+  background-image: url(./imgs/bg.jpg);
   margin: 0px;
   background-color:#444;
   font-size: 18px;
